--- a/package.json
+++ b/package.json
@@ -306,7 +306,7 @@
     "url": "0.11.0",
     "util": "0.12.3",
     "uuid": "3.0.1",
-    "vis": "4.21.0",
+    "vis-timeline": "7.7.3",
     "w3c-schemas": "1.3.1",
     "webfontloader": "1.6.28",
     "wellknown": "0.5.0",
